<resources>
    <string name="app_name_main">Text File Recovery</string>
    <string name="app_name">Text File Recovery</string>
    <string name="app_name_read">Read Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="displayText1">Standard Form</string>
    <string name="fillup">Fill in you details below</string>
    <string name="age">Age</string>
    <string name="HP">Phone Number</string>
    <string name="Name">Name</string>
        <string name="title_activity_list_view">List View Activity</string>
</resources>
